--- a/src/app/map/map.component.scss
+++ b/src/app/map/map.component.scss
@@ -1,8 +1,4 @@
 #map {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
   height: 100%;
-  background-color: #445a71;
+  padding: 0;
 }
