--- a/src/app/sidenav/sidenav.component.html
+++ b/src/app/sidenav/sidenav.component.html
@@ -6,8 +6,8 @@
 
 <h2 matSubheader>Objenious</h2>
 
-<mat-selection-list #list>
-  <mat-list-option *ngFor="let device of devices" [selected]="device.selected" (click)="onAreaListControlChanged(list)" [value]="device">
+<mat-selection-list #objeniousList>
+  <mat-list-option *ngFor="let device of objeniousDevices" [selected]="device.selected" (click)="onAreaListControlObjeniousChanged(objeniousList)" [value]="device">
     {{device.label}}
   </mat-list-option>
 </mat-selection-list>
@@ -15,3 +15,10 @@
 <mat-divider></mat-divider>
 
 <h2 matSubheader>Baliz</h2>
+
+<mat-selection-list #balizList>
+  <mat-list-option *ngFor="let device of balizDevices" [selected]="device.selected" (click)="onAreaListControlBalizChanged(balizList)" [value]="device">
+    {{device.name}}
+  </mat-list-option>
+</mat-selection-list>
+
