--- a/src/app/map/map.component.scss
+++ b/src/app/map/map.component.scss
@@ -1,4 +1,9 @@
 #map {
-  height: 100%;
+  height: 750px;
   padding: 0;
+}
+
+mat-sidenav.mat-sidenav {
+  background-color: #fafafa;
+  box-shadow: 3px 0 0 0 rgba(0, 0, 0, .1);
 }
