--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,16 +1,40 @@
-/* You can add global styles to this file, and also import other style files */
-@import '~@angular/material/prebuilt-themes/indigo-pink.css';
+@import '~@angular/material/theming';
 
-body {
-  font-family: Roboto, Arial, sans-serif;
-  margin: 0;
+@include mat-core();
+
+$primary: mat-palette($mat-deep-purple, 800);
+$accent: mat-palette($mat-orange, 200);
+
+$theme: mat-light-theme($primary, $accent);
+
+@include angular-material-theme($theme);
+
+.objenious-cluster {
+  height: 40px;
+  width: 40px;
+  border-radius: 50%;
+  background-color: rgba(38, 127, 202, 1);
+  border: 4px solid rgba(38, 127, 202, .5);
+  color: white;
+  text-align: center;
+  font-size: 20px;
+  line-height: 40px;
+  margin-top: -20px;
+  margin-left: -20px;
+  background-clip: padding-box;
 }
 
-.basic-container {
-  padding: 30px;
-}
-
-.version-info {
-  font-size: 8pt;
-  float: right;
+.baliz-cluster {
+  height: 40px;
+  width: 40px;
+  border-radius: 50%;
+  background-color: rgba(203, 41, 64, 1);
+  border: 4px solid rgba(203, 41, 64, .5);
+  color: white;
+  text-align: center;
+  font-size: 20px;
+  line-height: 40px;
+  margin-top: -20px;
+  margin-left: -20px;
+  background-clip: padding-box;
 }
