--- a/src/app/map/map.component.html
+++ b/src/app/map/map.component.html
@@ -33,6 +33,19 @@
         </mat-list-option>
       </mat-selection-list>
 
+      <mat-divider></mat-divider>
+
+      <h2 matSubheader></h2>
+      <div align="center">
+        <button *ngIf="!routeDisplayed" mat-raised-button (click)="generateRoute()">
+          Itinéraire
+        </button>
+        <button *ngIf="routeDisplayed" mat-raised-button (click)="deleteRoute()">
+          Effacer itinéraire
+        </button>
+      </div>
+
+
     </mat-sidenav>
     <mat-sidenav-content>
       <div id="map"></div>
